tests/unit_tests/sema/variable_redecl_array_conflict_01.cc
// RUN: %cxx -verify -fcheck %s

int items[2];

// expected-error@1 {{conflicting declaration of 'items'}}
int items[3];
